# kg_demo

./: .env.example  main.py  plan.md  pyproject.toml
app/api/: __init__.py
app/config/: __init__.py  provider_config.py  runtime_config.py  settings.py
app/core/builder/: __init__.py
app/core/extractor/: __init__.py  example.py  lx_extractor.py  mapping.py  prompt.py  provider.py
app/core/qa/: __init__.py
app/db/: __init__.py  neo4j_client.py
app/demo/: demo.py  kg_extractions.jsonl  test_document.txt
app/graph/: __init__.py  _type.py  base.py  entity.py  medical.py  relation.py
app/llm/: __init__.py  client.py
app/schema/: medical.py
tests/: test_extractor.py  test_llm.py  test_neo4j_client.py
