[project]
name = "kg-demo"
version = "0.1.0"
description = "Knowledge Graph Demo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "neo4j>=5.25.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
